# email-triage

./: README.md  __init__.py  app.py  data.py  env.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
server/: __init__.py  app.py
